Add inventory unit conversion model
